Fix items overlay the header on mobile onboard.

--- a/scss/partials/_onboard_wrapper.scss
+++ b/scss/partials/_onboard_wrapper.scss
@@ -177,6 +177,7 @@ div.onboard-lander {
         background-color: white;
         left: 0px;
         top: 0px;
+        z-index: 1031;
 
         div.mobile-logo {
           position: absolute;
